tests/rosetta/out/Pascal/brazilian-numbers.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:17Z
program BrazilianNumbers;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function sameDigits(n: integer; b: integer): boolean;
var
  f: Variant;
begin
  f := n mod b;
  n := Trunc(n div b);
  while (n > 0) do
  begin
    if (n mod b <> f) then ;
    n := Trunc(n div b);
  end;
  result := True;
  exit;
end;

function isBrazilian(n: integer): boolean;
var
  b: integer;
begin
  if (n < 7) then ;
  if ((n mod 2 = 0) and (n >= 8)) then ;
  b := 2;
  while (b < n - 1) do
  begin
    if sameDigits(n, b) then ;
    b := b + 1;
  end;
  result := False;
  exit;
end;

function isPrime(n: integer): boolean;
var
  d: integer;
begin
  if (n < 2) then ;
  if (n mod 2 = 0) then ;
  if (n mod 3 = 0) then ;
  d := 5;
  while (d * d <= n) do
  begin
    if (n mod d = 0) then ;
    d := d + 2;
    if (n mod d = 0) then ;
    d := d + 4;
  end;
  result := True;
  exit;
end;

function main(): integer;
var
  c: integer;
  kinds: specialize TArray<Variant>;
  n: integer;
begin
  kinds := specialize TArray<string>([' ', ' odd ', ' prime ']);
  for kind in kinds do
  begin
    writeln('First 20' + kind + 'Brazilian numbers:');
    c := 0;
    n := 7;
    while True do
    begin
      if isBrazilian(n) then
      begin
        writeln(IntToStr(n) + ' ');
        c := c + 1;
        if (c = 20) then
        begin
          writeln('
');
          break;
        end;
      end;
      if (kind = ' ') then
      begin
        n := n + 1;
      end else if (kind = ' odd ') then
      begin
        n := n + 2;
      end else
      begin
        while True do
        begin
          n := n + 2;
          if isPrime(n) then ;
        end;
      end;
    end;
  end;
  n := 7;
  c := 0;
  while (c < 100000) do
  begin
    if isBrazilian(n) then ;
    n := n + 1;
  end;
  writeln('The 100,000th Brazilian number: ' + IntToStr(n - 1));
end;

begin
  main();
end.
